libs/@local/hql/frontend-jexpr/src/lexer/snapshots/hql_frontend_jexpr__lexer__test__invalid_escape.snap
---
source: libs/@local/hql/frontend-jexpr/src/lexer/mod.rs
expression: "\"\\z\""
---
[31m[jexpr::lexing::invalid-string] Error:[0m Invalid String Literal
   ╭─[<unknown>:1:1]
   │
 1 │ "\z"
   │    │ 
   │    ╰─ Invalid escape sequence
   │ 
   │ Help: unknown escape sequence type
───╯
