libs/@local/hql/frontend-jexpr/src/lexer/snapshots/hql_frontend_jexpr__lexer__test__invalid_number.snap
---
source: libs/@local/hql/frontend-jexpr/src/lexer/mod.rs
expression: "{\"number\": 42.}"
---
[31m[lexing::invalid-number] Error:[0m Invalid Number Literal
   ╭─[<unknown>:1:1]
   │
 1 │ {"number": 42.}
   │            │ 
   │            ╰─ Expected a digit
───╯
