libs/@local/hql/frontend-jexpr/src/lexer/snapshots/hql_frontend_jexpr__lexer__test__missing_surrogate_pair.snap
---
source: libs/@local/hql/frontend-jexpr/src/lexer/mod.rs
expression: "\"\\uD800\""
---
[31m[jexpr::lexing::invalid-string] Error:[0m Invalid String Literal
   ╭─[<unknown>:1:1]
   │
 1 │ "\uD800"
   │         │ 
   │         ╰─ Invalid escape sequence
   │ 
   │ Help: expected low surrogate
───╯
