libs/@local/hql/frontend-jexpr/src/lexer/snapshots/hql_frontend_jexpr__lexer__test__unrecognized_character.snap
---
source: libs/@local/hql/frontend-jexpr/src/lexer/mod.rs
expression: "{\"ferris\": 🦀}"
---
[31m[lexing::invalid-character] Error:[0m Invalid Character
   ╭─[<unknown>:1:1]
   │
 1 │ {"ferris": 🦀}
   │            ┬─  
   │            ╰─── Unrecognized character
───╯
