libs/@local/hql/frontend-jexpr/src/lexer/snapshots/hql_frontend_jexpr__lexer__test__unterminated_string.snap
---
source: libs/@local/hql/frontend-jexpr/src/lexer/mod.rs
expression: "\"hello"
---
[31m[jexpr::lexing::invalid-string] Error:[0m Invalid String Literal
   ╭─[<unknown>:1:1]
   │
 1 │ "hello
   │       │ 
   │       ╰─ Unterminated string literal
───╯
